--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 coverage==6.4.2
 Django==4.0.6
+django-sass-compressor==1.2.1
 django_compressor==4.0
+libsass==0.21.0
+Pillow==9.2.0
 pip==22.2.1
 setuptools==63.2
